Vite build fix - windicss dynamic classes removed and fixed - wincss classes colors padding and margins added to safelist - 404 route created - translation files are working now in production  - files moved to public/locales - CD - continuous deployment configured

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,8 @@
-VITE_FAST_REFRESH=true
+VITE_FAST_REFRESH=false
 VITE_DEFAULT_THEME=light
 VITE_APP_NAME=Viterect
-VITE_ENV=development
+VITE_ENV=production
+
 
 VITE_BING_NEWS_RAPIDAPI_URL=https://bing-news-search1.p.rapidapi.com
 VITE_BING_NEWS_RAPIDAPI_HOST=bing-news-search1.p.rapidapi.com
