--- a/package.json
+++ b/package.json
@@ -6,19 +6,20 @@
   "author": "Refael Ben Zvi",
   "license": "MIT",
   "scripts": {
+    "start": "pnpm run build:vite & pnpm run serve",
+    "start-reloadsw": "run-p run-build-reloadsw serve",
+    "start-claims": "run-p run-build-claims serve",
+    "start-claims-reloadsw": "run-p run-build-reloadsw-claims  serve",
+    "start-sw": "run-p run-build-sw serve",
+    "start-sw-reloadsw": "run-p run-build-sw-reloadsw serve",
+    "start-sw-claims": "run-p run-build-sw-claims serve",
+    "start-sw-claims-reloadsw": "run-p run-build-sw-reloadsw-claims serve",
+    "start:electron": "electron .",
     "build": "run-p build:vite build:electron",
-    "build:vite": "cross-env NODE_ENV=production tsc && vite build",
+    "build:vite": "cross-env NODE_ENV=production vite build",
     "build:electron": "cross-env NODE_ENV=production tsc -p electron",
     "build:electron:dev": "cross-env NODE_ENV=development tsc -p electron",
     "build:pwa": "cross-env DEBUG=vite-plugin-pwa:* BASE_URL=/ SOURCE_MAP=true vite build",
-    "run-build": "cross-env DEBUG=vite-plugin-pwa:* BASE_URL=/ SOURCE_MAP=true vite build",
-    "run-build-reloadsw": "cross-env DEBUG=vite-plugin-pwa:* BASE_URL=/ SOURCE_MAP=true RELOAD_SW=true vite build",
-    "run-build-claims": "cross-env DEBUG=vite-plugin-pwa:* BASE_URL=/ SOURCE_MAP=true CLAIMS=true vite build",
-    "run-build-reloadsw-claims": "cross-env DEBUG=vite-plugin-pwa:* BASE_URL=/ SOURCE_MAP=true CLAIMS=true RELOAD_SW=true vite build",
-    "run-build-sw": "rimraf dist && cross-env DEBUG=vite-plugin-pwa:* BASE_URL=/ SOURCE_MAP=true SW=true vite build",
-    "run-build-sw-reloadsw": "cross-env DEBUG=vite-plugin-pwa:* BASE_URL=/ SOURCE_MAP=true RELOAD_SW=true SW=true vite build",
-    "run-build-sw-claims": "cross-env DEBUG=vite-plugin-pwa:* BASE_URL=/ SOURCE_MAP=true CLAIMS=true SW=true vite build",
-    "run-build-sw-reloadsw-claims": "cross-env DEBUG=vite-plugin-pwa:* BASE_URL=/ SOURCE_MAP=true CLAIMS=true RELOAD_SW=true SW=true vite build",
     "dist": "run-p build electron-builder",
     "pack": "run-p build electron-builder --dir",
     "clean": "rimraf dist main src/out",
@@ -32,17 +33,18 @@
     "dev:electron:vite": "run-p dev dev:electron",
     "extract-translations": "i18next --fail-on-warnings",
     "prepare": "husky install",
+    "preview-https": "serve dist",
+    "preview": "vite preview",
+    "run-build": "cross-env DEBUG=vite-plugin-pwa:* BASE_URL=/ SOURCE_MAP=true vite build",
+    "run-build-reloadsw": "cross-env DEBUG=vite-plugin-pwa:* BASE_URL=/ SOURCE_MAP=true RELOAD_SW=true vite build",
+    "run-build-claims": "cross-env DEBUG=vite-plugin-pwa:* BASE_URL=/ SOURCE_MAP=true CLAIMS=true vite build",
+    "run-build-reloadsw-claims": "cross-env DEBUG=vite-plugin-pwa:* BASE_URL=/ SOURCE_MAP=true CLAIMS=true RELOAD_SW=true vite build",
+    "run-build-sw": "rimraf dist && cross-env DEBUG=vite-plugin-pwa:* BASE_URL=/ SOURCE_MAP=true SW=true vite build",
+    "run-build-sw-reloadsw": "cross-env DEBUG=vite-plugin-pwa:* BASE_URL=/ SOURCE_MAP=true RELOAD_SW=true SW=true vite build",
+    "run-build-sw-claims": "cross-env DEBUG=vite-plugin-pwa:* BASE_URL=/ SOURCE_MAP=true CLAIMS=true SW=true vite build",
+    "run-build-sw-reloadsw-claims": "cross-env DEBUG=vite-plugin-pwa:* BASE_URL=/ SOURCE_MAP=true CLAIMS=true RELOAD_SW=true SW=true vite build",
     "serve": "serve dist",
     "serve:test": "start-server-and-test serve http://localhost:5000",
-    "start": "pnpm run-build & serve",
-    "start-reloadsw": "run-p run-build-reloadsw serve",
-    "start-claims": "run-p run-build-claims serve",
-    "start-claims-reloadsw": "run-p run-build-reloadsw-claims  serve",
-    "start-sw": "run-p run-build-sw serve",
-    "start-sw-reloadsw": "run-p run-build-sw-reloadsw serve",
-    "start-sw-claims": "run-p run-build-sw-claims serve",
-    "start-sw-claims-reloadsw": "run-p run-build-sw-reloadsw-claims serve",
-    "start:electron": "electron .",
     "lint": "run-p lint:tsc lint:eslint lint:style",
     "lint:style": "stylelint --cache --fix --ignore-path .gitignore '**/*.css'",
     "lint:eslint": "eslint --cache --fix --ignore-path .gitignore --ext .ts,.tsx src",
@@ -55,35 +57,25 @@
     "test:e2e": "pnpm serve:test 'cypress open'",
     "test:e2e:headless": "pnpm serve:test 'cypress run'",
     "test:e2e:ci": "vite build && pnpm serve:test 'cypress run --record'",
-    "preview-https": "serve dist",
-    "preview": "vite preview",
     "validate": "run-p lint test:ci test:e2e:headless"
   },
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@headlessui/react": "^1.4.2",
-    "@ionic/react": "^6.0.1",
-    "@ionic/react-router": "^6.0.1",
-    "@vitejs/plugin-react-refresh": "^1.3.6",
     "@xstate/react": "^1.6.3",
     "axios": "^0.24.0",
-    "chart.js": "^3.7.0",
     "formik": "^2.2.9",
-    "html-react-parser": "^1.4.4",
     "i18next": "^21.6.3",
     "i18next-browser-languagedetector": "^6.1.2",
     "i18next-http-backend": "^1.3.1",
     "immer": "^9.0.7",
-    "jss": "^10.9.0",
-    "jss-rtl": "^0.3.0",
-    "lodash": "^4.17.21",
     "millify": "^4.0.0",
     "moment": "^2.29.1",
     "nprogress": "^0.2.0",
     "prism-theme-vars": "^0.2.2",
+    "prismjs": "^1.26.0",
     "react": "^17.0.2",
-    "react-chartjs-2": "^4.0.0",
     "react-dom": "^17.0.2",
     "react-i18next": "^11.15.1",
     "react-number-format": "^4.9.1",
@@ -92,7 +84,9 @@
     "react-router-config": "^5.1.1",
     "react-router-dom": "^5.0.1",
     "react-spinners-kit": "^1.9.1",
+    "react-tsparticles": "^1.39.0",
     "recoil": "^0.5.2",
+    "remark-mdx-code-meta": "^1.0.0",
     "xstate": "^4.26.1"
   },
   "devDependencies": {
@@ -126,6 +120,8 @@
     "@typescript-eslint/eslint-plugin": "^5.8.0",
     "@typescript-eslint/parser": "^5.8.0",
     "@vitejs/plugin-react": "^1.1.3",
+    "@vitejs/plugin-react-refresh": "^1.3.6",
+    "@windicss/plugin-question-mark": "^0.1.1",
     "autoprefixer": "^10.4.0",
     "babel-jest": "^27.4.5",
     "babel-preset-vite": "^1.0.4",
@@ -178,7 +174,7 @@
     "vite-plugin-mdx": "^3.5.10",
     "vite-plugin-pages": "^0.18.2",
     "vite-plugin-pwa": "^0.11.12",
-    "vite-plugin-windicss": "^1.6.1",
+    "vite-plugin-windicss": "^1.6.2",
     "vite-tsconfig-paths": "^3.3.17",
     "workbox-core": "^6.4.2",
     "workbox-precaching": "^6.4.2",
