--- a/.github/workflows/app-continuos-deployment.yaml
+++ b/.github/workflows/app-continuos-deployment.yaml
@@ -15,7 +15,7 @@ jobs:
       - name: setup
         run: npm install --no-optional
       - name: build
-        run: npm run build
+        run: npm run build:vite
       - name: Deploy to App Engine
         id: deploy
         uses: google-github-actions/deploy-appengine@v0.2.0
