--- a/package.json
+++ b/package.json
@@ -73,8 +73,6 @@
     "millify": "^4.0.0",
     "moment": "^2.29.1",
     "nprogress": "^0.2.0",
-    "prism-theme-vars": "^0.2.2",
-    "prismjs": "^1.26.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-i18next": "^11.15.1",
@@ -85,7 +83,6 @@
     "react-spinners-kit": "^1.9.1",
     "react-tsparticles": "^1.39.0",
     "recoil": "^0.5.2",
-    "remark-mdx-code-meta": "^1.0.0",
     "xstate": "^4.26.1"
   },
   "devDependencies": {
@@ -96,11 +93,8 @@
     "@cypress/code-coverage": "^3.9.12",
     "@dblechoc/plugin-lit-refresh": "^0.0.6",
     "@iconify/json": "^1.1.447",
-    "@mdx-js/mdx": "^1.6.22",
-    "@mdx-js/react": "^1.6.22",
     "@nabla/vite-plugin-eslint": "^1.3.5",
     "@rollup/plugin-replace": "^3.0.1",
-    "@svgr/core": "^5.5.0",
     "@tailwindcss/postcss7-compat": "2.1.4",
     "@testing-library/cypress": "^8.0.2",
     "@testing-library/dom": "^8.11.1",
@@ -110,7 +104,6 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/css-mediaquery": "^0.1.1",
     "@types/jest": "^27.0.3",
-    "@types/markdown-it-link-attributes": "^3.0.1",
     "@types/nprogress": "^0.2.0",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
@@ -119,7 +112,6 @@
     "@typescript-eslint/eslint-plugin": "^5.8.0",
     "@typescript-eslint/parser": "^5.8.0",
     "@vitejs/plugin-react": "^1.1.3",
-    "@vitejs/plugin-react-refresh": "^1.3.6",
     "@windicss/plugin-question-mark": "^0.1.1",
     "autoprefixer": "^10.4.0",
     "babel-jest": "^27.4.5",
@@ -147,13 +139,12 @@
     "eslint-plugin-react-prefer-function-component": "^0.0.7",
     "eslint-plugin-testing-library": "^5.0.1",
     "eslint-plugin-unicorn": "^39.0.0",
+    "highlight.js": "^11.4.0",
     "https-localhost": "^4.7.0",
     "husky": "^7.0.4",
     "i18next-parser": "^5.3.0",
     "jest": "^27.4.5",
     "jest-watch-typeahead": "^1.0.0",
-    "markdown-it-link-attributes": "^4.0.0",
-    "markdown-it-prism": "^2.2.1",
     "msw": "^0.36.3",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.5",
@@ -168,11 +159,10 @@
     "unplugin-auto-import": "^0.5.4",
     "unplugin-icons": "^0.12.23",
     "vite": "2.7.6",
-    "vite-pages-theme-doc": "^3.1.0",
     "vite-plugin-inspect": "^0.3.11",
-    "vite-plugin-mdx": "^3.5.10",
     "vite-plugin-pages": "^0.19.9",
     "vite-plugin-pwa": "^0.11.12",
+    "vite-plugin-react-md": "^1.0.1",
     "vite-plugin-windicss": "^1.6.2",
     "vite-tsconfig-paths": "^3.3.17",
     "workbox-core": "^6.4.2",
