--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "@iconify/json": "^1.1.447",
     "@nabla/vite-plugin-eslint": "^1.3.5",
     "@rollup/plugin-replace": "^3.0.1",
+    "@svgr/core": "^5.5.0",
     "@tailwindcss/postcss7-compat": "2.1.4",
     "@testing-library/cypress": "^8.0.2",
     "@testing-library/dom": "^8.11.1",
