--- a/package.json
+++ b/package.json
@@ -54,7 +54,9 @@
     "test:watch": "jest --watch",
     "test:watch-all": "jest --watch-all",
     "test:ci": "jest --ci",
-    "test:e2e": "pnpm serve:test 'cypress open'",
+    "test:e2e": "cypress open",
+    "test:e2e:dev": "pnpm run dev && pnpm run e2e",
+    "test:e2e:prod": "pnpm run start && pnpm run e2e",
     "test:e2e:headless": "pnpm serve:test 'cypress run'",
     "test:e2e:ci": "vite build && pnpm serve:test 'cypress run --record'",
     "validate": "run-p lint test:ci test:e2e:headless"
@@ -65,6 +67,8 @@
     "@headlessui/react": "^1.4.2",
     "@xstate/react": "^1.6.3",
     "axios": "^0.24.0",
+    "clsx": "^1.1.1",
+    "daisyui": "^1.25.4",
     "formik": "^2.2.9",
     "i18next": "^21.6.3",
     "i18next-browser-languagedetector": "^6.1.2",
@@ -106,7 +110,7 @@
     "@types/css-mediaquery": "^0.1.1",
     "@types/jest": "^27.0.3",
     "@types/nprogress": "^0.2.0",
-    "@types/react": "^17.0.33",
+    "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.10",
     "@types/react-router-config": "^5.0.4",
     "@types/react-router-dom": "^5.3.2",
@@ -117,10 +121,12 @@
     "autoprefixer": "^10.4.0",
     "babel-jest": "^27.4.5",
     "babel-preset-vite": "^1.0.4",
+    "chance": "^1.1.8",
     "commitizen": "^4.2.4",
     "critters": "^0.0.15",
     "cross-env": "^7.0.3",
     "css-mediaquery": "^0.1.2",
+    "cssnano": "^5.0.15",
     "cypress": "^9.2.0",
     "cz-conventional-changelog": "^3.3.0",
     "electron": "^16.0.5",
