--- a/.editorconfig
+++ b/.editorconfig
@@ -35,6 +35,17 @@ ij_css_space_before_opening_brace = true
 ij_css_use_double_quotes = true
 ij_css_value_alignment = do_not_align
 
+[*.dart]
+max_line_length = 80
+
+[*.feature]
+indent_size = 2
+ij_gherkin_keep_indents_on_empty_lines = false
+
+[*.haml]
+indent_size = 2
+ij_haml_keep_indents_on_empty_lines = false
+
 [*.less]
 indent_size = 2
 ij_less_align_closing_brace_with_properties = false
@@ -123,6 +134,17 @@ ij_stylus_space_before_opening_brace = true
 ij_stylus_use_double_quotes = true
 ij_stylus_value_alignment = 0
 
+[*.vue]
+indent_size = 2
+tab_width = 2
+ij_continuation_indent_size = 4
+ij_vue_indent_children_of_top_level = template
+ij_vue_interpolation_new_line_after_start_delimiter = true
+ij_vue_interpolation_new_line_before_end_delimiter = true
+ij_vue_interpolation_wrap = off
+ij_vue_keep_indents_on_empty_lines = false
+ij_vue_spaces_within_interpolation_expressions = true
+
 [.editorconfig]
 ij_editorconfig_align_group_field_declarations = false
 ij_editorconfig_space_after_colon = false
@@ -152,11 +174,10 @@ ij_xml_text_wrap = normal
 
 [{*.ats,*.cts,*.mts,*.ts}]
 indent_style = tab
-tab_width = 2
-ij_continuation_indent_size = 2
+ij_continuation_indent_size = 4
 ij_smart_tabs = true
 ij_typescript_align_imports = false
-ij_typescript_align_multiline_array_initializer_expression = false
+ij_typescript_align_multiline_array_initializer_expression = true
 ij_typescript_align_multiline_binary_operation = false
 ij_typescript_align_multiline_chained_methods = false
 ij_typescript_align_multiline_extends_list = false
@@ -164,12 +185,12 @@ ij_typescript_align_multiline_for = true
 ij_typescript_align_multiline_parameters = true
 ij_typescript_align_multiline_parameters_in_calls = false
 ij_typescript_align_multiline_ternary_operation = false
-ij_typescript_align_object_properties = 0
+ij_typescript_align_object_properties = 1
 ij_typescript_align_union_types = false
-ij_typescript_align_var_statements = 0
+ij_typescript_align_var_statements = 2
 ij_typescript_array_initializer_new_line_after_left_brace = false
 ij_typescript_array_initializer_right_brace_on_new_line = false
-ij_typescript_array_initializer_wrap = off
+ij_typescript_array_initializer_wrap = normal
 ij_typescript_assignment_wrap = off
 ij_typescript_binary_operation_sign_on_next_line = false
 ij_typescript_binary_operation_wrap = off
@@ -345,9 +366,9 @@ ij_javascript_align_multiline_for = true
 ij_javascript_align_multiline_parameters = true
 ij_javascript_align_multiline_parameters_in_calls = false
 ij_javascript_align_multiline_ternary_operation = false
-ij_javascript_align_object_properties = 1
+ij_javascript_align_object_properties = 0
 ij_javascript_align_union_types = false
-ij_javascript_align_var_statements = 2
+ij_javascript_align_var_statements = 0
 ij_javascript_array_initializer_new_line_after_left_brace = false
 ij_javascript_array_initializer_right_brace_on_new_line = false
 ij_javascript_array_initializer_wrap = off
