codeql-analysis.yml changed branches

--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -2,9 +2,13 @@ name: CodeQL
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - master
+      - main
   pull_request:
-    branches: [ main ]
+    branches:
+      - master
+      - main
 
 jobs:
   analyze:
