fixed failing tests

--- a/package.json
+++ b/package.json
@@ -1,179 +1,184 @@
 {
-	"name": "viterect",
-	"version": "1.0.0",
-	"description": "vite react windicss boilerplate",
-	"main": "./dist/main.tsx",
-	"author": "Refael Ben Zvi",
-	"license": "MIT",
-	"scripts": {
-		"start": "pnpm run build & pnpm run serve",
-		"start:test": "pnpm run build:test & pnpm run serve:test",
-		"build": "cross-env NODE_ENV=production SOURCE_MAP=true CLAIMS=true SW=true vite build",
-		"build:test": "cross-env NODE_ENV=production SOURCE_MAP=true CLAIMS=true SW=true RELOAD_SW=false vite build --mode test",
-		"serve": "serve dist",
-		"serve:test": "serve tests/dist -p 8080",
-		"clean": "rimraf dist main src/out",
-		"commit": "cz",
-		"dev": "cross-env NODE_ENV=development vite",
-		"dev:test": "cross-env NODE_ENV=test vite --mode test",
-		"extract-translations": "i18next --fail-on-warnings",
-		"prepare:husky": "husky install",
-		"lint": "pnpm lint:tsc && pnpm lint:eslint",
-		"lint:eslint": "eslint --fix --cache --ignore-path .gitignore --ext .ts,.tsx src",
-		"lint:tsc": "tsc",
-		"test": "jest",
-		"test:watch": "jest --watch",
-		"test:watch-all": "jest --watch-all",
-		"test:ci": "jest --ci",
-		"test:e2e": "cypress open",
-		"test:e2e:headless": "cypress run",
-		"test:e2e:ci": "vite build --mode test && start-server-and-test serve:test http://localhost:8080 'cypress run --record'",
-		"coverage:jest": "start ./coverage/jest/lcov-report/index.html",
-		"coverage:cypress": "start ./coverage/cypress/lcov-report/index.html",
-		"validate": "pnpm lint && pnpm test:ci && pnpm test:e2e:headless"
-	},
-	"dependencies": {
-		"@emotion/react": "^11.7.1",
-		"@emotion/styled": "^11.6.0",
-		"@xstate/react": "^1.6.3",
-		"axios": "^0.24.0",
-		"clsx": "^1.1.1",
-		"formik": "^2.2.9",
-		"i18next": "^21.6.3",
-		"i18next-browser-languagedetector": "^6.1.2",
-		"i18next-http-backend": "^1.3.1",
-		"immer": "^9.0.7",
-		"millify": "^4.0.0",
-		"moment": "^2.29.1",
-		"nprogress": "^0.2.0",
-		"react": "^17.0.2",
-		"react-dom": "^17.0.2",
-		"react-i18next": "^11.15.1",
-		"react-number-format": "^4.9.1",
-		"react-query": "^3.34.6",
-		"react-router": "^6.2.1",
-		"react-router-dom": "^6.2.1",
-		"react-spinners-kit": "^1.9.1",
-		"react-transition-group": "^4.4.2",
-		"react-tsparticles": "^1.39.0",
-		"recoil": "^0.5.2",
-		"xstate": "^4.26.1"
-	},
-	"devDependencies": {
-		"@babel/core": "^7.16.12",
-		"@babel/plugin-syntax-jsx": "^7.16.7",
-		"@babel/preset-env": "^7.16.11",
-		"@babel/preset-react": "^7.16.7",
-		"@babel/preset-typescript": "^7.16.5",
-		"@cypress/code-coverage": "^3.9.12",
-		"@dblechoc/plugin-lit-refresh": "^0.0.6",
-		"@iconify/json": "^1.1.447",
-		"@nabla/vite-plugin-eslint": "^1.3.5",
-		"@rollup/plugin-replace": "^3.0.1",
-		"@svgr/core": "^5.5.0",
-		"@tailwindcss/postcss7-compat": "2.1.4",
-		"@testing-library/cypress": "^8.0.2",
-		"@types/css-mediaquery": "^0.1.1",
-		"@types/jest": "^27.0.3",
-		"@types/nprogress": "^0.2.0",
-		"@types/react": "^17.0.38",
-		"@types/react-dom": "^17.0.10",
-		"@types/react-router-config": "^5.0.4",
-		"@types/react-router-dom": "^5.3.2",
-		"@types/react-transition-group": "^4.4.4",
-		"@typescript-eslint/eslint-plugin": "^5.8.0",
-		"@typescript-eslint/parser": "^5.8.0",
-		"@vitejs/plugin-react": "^1.1.3",
-		"@windicss/plugin-question-mark": "^0.1.1",
-		"autoprefixer": "^10.4.0",
-		"babel-plugin-transform-import-meta": "^2.1.0",
-		"babel-preset-react-app": "^10.0.1",
-		"babel-preset-vite": "^1.0.4",
-		"chance": "^1.1.8",
-		"commitizen": "^4.2.4",
-		"critters": "^0.0.15",
-		"cross-env": "^7.0.3",
-		"css-mediaquery": "^0.1.2",
-		"cssnano": "^5.0.15",
-		"cypress": "^9.2.0",
-		"cz-conventional-changelog": "^3.3.0",
-		"daisyui": "^1.25.4",
-		"esbuild": "^0.14.14",
-		"eslint": "^8.5.0",
-		"eslint-config-airbnb": "^19.0.2",
-		"eslint-config-airbnb-base": "^15.0.0",
-		"eslint-config-airbnb-typescript": "^16.1.0",
-		"eslint-plugin-cypress": "^2.12.1",
-		"eslint-plugin-editorconfig": "^3.2.0",
-		"eslint-plugin-import": "^2.25.3",
-		"eslint-plugin-jest": "^25.3.0",
-		"eslint-plugin-jest-dom": "^3.9.2",
-		"eslint-plugin-jsx-a11y": "^6.5.1",
-		"eslint-plugin-react": "^7.28.0",
-		"eslint-plugin-react-hooks": "^4.3.0",
-		"eslint-plugin-react-prefer-function-component": "^0.0.7",
-		"eslint-plugin-testing-library": "^5.0.1",
-		"eslint-plugin-unicorn": "^39.0.0",
-		"highlight.js": "^11.4.0",
-		"husky": "^7.0.4",
-		"i18next-parser": "^5.3.0",
-		"jest": "^27.4.7",
-		"jest-circus": "^27.4.6",
-		"jest-watch-typeahead": "^1.0.0",
-		"lint-staged": "^12.3.4",
-		"npm-run-all": "^4.1.5",
-		"postcss": "^8.4.5",
-		"postcss-import": "^14.0.2",
-		"rimraf": "^3.0.2",
-		"rollup-plugin-istanbul": "^3.0.0",
-		"sass": "^1.47.0",
-		"serve": "^13.0.2",
-		"start-server-and-test": "^1.14.0",
-		"tailwindcss": "npm:@tailwindcss/postcss7-compat@2.1.4",
-		"tailwindcss-flip": "^1.0.0",
-		"typescript": "^4.5.4",
-		"unplugin-auto-import": "^0.5.4",
-		"unplugin-icons": "^0.12.23",
-		"vite": "2.7.6",
-		"vite-plugin-inspect": "^0.3.11",
-		"vite-plugin-pages": "^0.19.9",
-		"vite-plugin-pwa": "^0.11.12",
-		"vite-plugin-react-md": "^1.0.1",
-		"vite-plugin-windicss": "^1.6.3",
-		"vite-tsconfig-paths": "^3.3.17",
-		"windicss": "^3.4.3",
-		"workbox-core": "^6.4.2",
-		"workbox-precaching": "^6.4.2",
-		"workbox-routing": "^6.4.2",
-		"workbox-window": "^6.4.2"
-	},
-	"config": {
-		"commitizen": {
-			"path": "./node_modules/cz-conventional-changelog"
-		}
-	},
-	"lint-staged": {
-		"*.{ts,tsx}": [
-			"eslint --cache",
-			"jest --findRelatedTests --coverage=false"
-		]
-	},
-	"nyc": {
-		"report-dir": "coverage/cypress",
-		"reporter": [
-			"lcov"
-		]
-	},
-	"directories": {
-		"test": "tests"
-	},
-	"repository": {
-		"type": "git",
-		"url": "git+https://github.com/Refaelbenzvi24/Viterect.git"
-	},
-	"keywords": [],
-	"bugs": {
-		"url": "https://github.com/Refaelbenzvi24/Viterect/issues"
-	},
-	"homepage": "https://github.com/Refaelbenzvi24/Viterect#readme"
+  "name": "viterect",
+  "version": "1.0.0",
+  "description": "vite react windicss boilerplate",
+  "main": "./dist/main.tsx",
+  "author": "Refael Ben Zvi",
+  "license": "MIT",
+  "scripts": {
+    "start": "pnpm run build & pnpm run serve",
+    "start:test": "pnpm run build:test & pnpm run serve:test",
+    "build": "cross-env VITE_ENV=production SOURCE_MAP=true vite build",
+    "build:test": "cross-env VITE_ENV=test SOURCE_MAP=true vite build",
+    "serve": "serve dist",
+    "serve:test": "serve tests/dist -p 4000",
+    "clean": "rimraf dist main src/out",
+    "commit": "cz",
+    "dev": "cross-env VITE_ENV=development vite",
+    "dev:test": "cross-env VITE_ENV=test vite",
+    "extract-translations": "i18next --fail-on-warnings",
+    "prepare:husky": "husky install",
+    "lint": "pnpm lint:tsc && pnpm lint:eslint",
+    "lint:eslint": "eslint --fix --cache --ignore-path .gitignore --ext .ts,.tsx src",
+    "lint:tsc": "tsc",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:watch-all": "jest --watch-all",
+    "test:ci": "jest --ci",
+    "test:e2e": "cypress open",
+    "test:e2e:headless": "cypress run",
+    "test:e2e:ci": "vite build --mode test && start-server-and-test serve:test http://localhost:8080 'cypress run --record'",
+    "coverage:jest": "start ./coverage/jest/lcov-report/index.html",
+    "coverage:cypress": "start ./coverage/cypress/lcov-report/index.html",
+    "validate": "pnpm lint && pnpm test:ci && pnpm test:e2e:headless"
+  },
+  "dependencies": {
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@xstate/react": "^1.6.3",
+    "axios": "^0.24.0",
+    "clsx": "^1.1.1",
+    "formik": "^2.2.9",
+    "i18next": "^21.6.3",
+    "i18next-browser-languagedetector": "^6.1.2",
+    "i18next-http-backend": "^1.3.1",
+    "immer": "^9.0.7",
+    "millify": "^4.0.0",
+    "moment": "^2.29.1",
+    "nprogress": "^0.2.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-i18next": "^11.15.1",
+    "react-number-format": "^4.9.1",
+    "react-query": "^3.34.6",
+    "react-router": "^6.2.1",
+    "react-router-dom": "^6.2.1",
+    "react-spinners-kit": "^1.9.1",
+    "react-transition-group": "^4.4.2",
+    "react-tsparticles": "^1.39.0",
+    "recoil": "^0.5.2",
+    "xstate": "^4.26.1"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.16.12",
+    "@babel/plugin-syntax-jsx": "^7.16.7",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-react": "^7.16.7",
+    "@babel/preset-typescript": "^7.16.5",
+    "@cypress/code-coverage": "^3.9.12",
+    "@dblechoc/plugin-lit-refresh": "^0.0.6",
+    "@iconify/json": "^1.1.447",
+    "@nabla/vite-plugin-eslint": "^1.3.5",
+    "@rollup/plugin-replace": "^3.0.1",
+    "@svgr/core": "^5.5.0",
+    "@tailwindcss/postcss7-compat": "2.1.4",
+    "@testing-library/cypress": "^8.0.2",
+    "@types/css-mediaquery": "^0.1.1",
+    "@types/jest": "^27.0.3",
+    "@types/nprogress": "^0.2.0",
+    "@types/react": "^17.0.38",
+    "@types/react-dom": "^17.0.10",
+    "@types/react-router-config": "^5.0.4",
+    "@types/react-router-dom": "^5.3.2",
+    "@types/react-transition-group": "^4.4.4",
+    "@typescript-eslint/eslint-plugin": "^5.8.0",
+    "@typescript-eslint/parser": "^5.8.0",
+    "@vitejs/plugin-react": "^1.1.3",
+    "@windicss/plugin-question-mark": "^0.1.1",
+    "autoprefixer": "^10.4.0",
+    "babel-plugin-transform-import-meta": "^2.1.0",
+    "babel-preset-react-app": "^10.0.1",
+    "babel-preset-vite": "^1.0.4",
+    "chance": "^1.1.8",
+    "commitizen": "^4.2.4",
+    "critters": "^0.0.15",
+    "cross-env": "^7.0.3",
+    "css-mediaquery": "^0.1.2",
+    "cssnano": "^5.0.15",
+    "cypress": "^9.2.0",
+    "cypress-localstorage-commands": "^1.7.0",
+    "cz-conventional-changelog": "^3.3.0",
+    "daisyui": "^1.25.4",
+    "esbuild": "^0.14.14",
+    "eslint": "^8.5.0",
+    "eslint-config-airbnb": "^19.0.2",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-airbnb-typescript": "^16.1.0",
+    "eslint-plugin-cypress": "^2.12.1",
+    "eslint-plugin-editorconfig": "^3.2.0",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jest": "^25.3.0",
+    "eslint-plugin-jest-dom": "^3.9.2",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "eslint-plugin-react-prefer-function-component": "^0.0.7",
+    "eslint-plugin-testing-library": "^5.0.1",
+    "eslint-plugin-unicorn": "^39.0.0",
+    "highlight.js": "^11.4.0",
+    "husky": "^7.0.4",
+    "i18next-parser": "^5.3.0",
+    "jest": "^27.4.7",
+    "jest-circus": "^27.4.6",
+    "jest-watch-typeahead": "^1.0.0",
+    "lint-staged": "^12.3.4",
+    "msw": "^0.38.1",
+    "npm-run-all": "^4.1.5",
+    "postcss": "^8.4.5",
+    "postcss-import": "^14.0.2",
+    "rimraf": "^3.0.2",
+    "rollup-plugin-istanbul": "^3.0.0",
+    "sass": "^1.47.0",
+    "serve": "^13.0.2",
+    "start-server-and-test": "^1.14.0",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@2.1.4",
+    "tailwindcss-flip": "^1.0.0",
+    "typescript": "^4.5.4",
+    "unplugin-auto-import": "^0.5.4",
+    "unplugin-icons": "^0.12.23",
+    "vite": "2.7.6",
+    "vite-plugin-inspect": "^0.3.11",
+    "vite-plugin-pages": "^0.19.9",
+    "vite-plugin-pwa": "^0.11.12",
+    "vite-plugin-react-md": "^1.0.1",
+    "vite-plugin-windicss": "^1.6.3",
+    "vite-tsconfig-paths": "^3.3.17",
+    "windicss": "^3.4.3",
+    "workbox-core": "^6.4.2",
+    "workbox-precaching": "^6.4.2",
+    "workbox-routing": "^6.4.2",
+    "workbox-window": "^6.4.2"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": [
+      "eslint --cache",
+      "jest --findRelatedTests --coverage=false"
+    ]
+  },
+  "nyc": {
+    "report-dir": "coverage/cypress",
+    "reporter": [
+      "lcov"
+    ]
+  },
+  "directories": {
+    "test": "tests"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Refaelbenzvi24/Viterect.git"
+  },
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/Refaelbenzvi24/Viterect/issues"
+  },
+  "homepage": "https://github.com/Refaelbenzvi24/Viterect#readme",
+  "msw": {
+    "workerDirectory": "public"
+  }
 }
