--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
-VITE_FAST_REFRESH=false
-VITE_DEFAULT_THEME=light
-VITE_APP_NAME=Viterect
+VITE_BING_NEWS_RAPIDAPI_URL=https://bing-news-search1.p.rapidapi.com
+VITE_BING_NEWS_RAPIDAPI_HOST=bing-news-search1.p.rapidapi.com
 
-VITE_BING_NEWS_RAPIDAPI_URL=https://61ed4971f3011500174d239a.mockapi.io
+VITE_COINRANKING_RAPIDAPI_URL=https://coinranking1.p.rapidapi.com
+VITE_COINRANKING_RAPIDAPI_HOST=coinranking1.p.rapidapi.com
 
-VITE_COINRANKING_RAPIDAPI_URL=https://61ed4971f3011500174d239a.mockapi.io
+VITE_X_RAPIDAPI_KEY=
