--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -1,5 +1,16 @@
 {
-	"paths": {
-		"cypress": ["./types/cypress"]
-	}
+	"compilerOptions": {
+		"allowSyntheticDefaultImports": true,
+		"forceConsistentCasingInFileNames": true,
+		"lib": ["ESNext"],
+		"module": "ESNext",
+		"moduleResolution": "Node",
+		"noEmit": true,
+		"resolveJsonModule": true,
+		"skipLibCheck": true,
+		"strict": true,
+		"target": "ESNext",
+		"types": ["cypress", "@testing-library/cypress"]
+	},
+	"include": ["."]
 }
