--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,9 +14,7 @@
 		"strict": true,
 		"target": "ESNext",
 		"useUnknownInCatchVariables": true,
-		"types": [
-			"vite-plugin-pwa/client"
-		]
+		"types": ["vite-plugin-pwa/client"]
 	},
 	"include": ["src", "vite.config.ts", "global.d.ts", "declare.d.ts"]
 }
