--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 		"i18next-browser-languagedetector": "^6.1.2",
 		"i18next-http-backend": "^1.3.1",
 		"immer": "^9.0.7",
+		"lodash": "^4.17.21",
 		"millify": "^4.0.0",
 		"moment": "^2.29.1",
 		"nprogress": "^0.2.0",
@@ -74,6 +75,7 @@
 		"@testing-library/cypress": "^8.0.2",
 		"@types/css-mediaquery": "^0.1.1",
 		"@types/jest": "^27.0.3",
+		"@types/lodash": "^4.14.182",
 		"@types/nprogress": "^0.2.0",
 		"@types/react": "^17.0.38",
 		"@types/react-dom": "^17.0.10",
@@ -169,13 +171,13 @@
 	},
 	"repository": {
 		"type": "git",
-		"url": "git+https://github.com/Refaelbenzvi24/Viterect.git"
+		"url": "git+https://github.com/Refaelbenzvi24/Viterect-vite-react-boilerplate.git"
 	},
 	"keywords": [],
 	"bugs": {
-		"url": "https://github.com/Refaelbenzvi24/Viterect/issues"
+		"url": "https://github.com/Refaelbenzvi24/Viterect-vite-react-boilerplate/issues"
 	},
-	"homepage": "https://github.com/Refaelbenzvi24/Viterect#readme",
+	"homepage": "https://github.com/Refaelbenzvi24/Viterect-vite-react-boilerplate/#readme",
 	"msw": {
 		"workerDirectory": "public"
 	}
