--- a/package.json
+++ b/package.json
@@ -32,8 +32,9 @@
 		"validate": "pnpm lint && pnpm test:ci && pnpm test:e2e:headless"
 	},
 	"dependencies": {
-		"@emotion/react": "^11.7.1",
-		"@emotion/styled": "^11.6.0",
+		"@emotion/react": "^11.8.1",
+		"@emotion/styled": "^11.8.1",
+		"@mui/material": "^5.8.4",
 		"@xstate/react": "^1.6.3",
 		"axios": "^0.24.0",
 		"clsx": "^1.1.1",
