feat: added mui and removed tailwind/windicss
- recreated the boilerplate components with mui

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 VITE_DEFAULT_THEME=light
+VITE_DEFAULT_LANG=en
 VITE_APP_NAME=Viterect
 
 VITE_BING_NEWS_RAPIDAPI_URL=https://61ed4971f3011500174d239a.mockapi.io
