--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "viterect",
 	"version": "1.0.0",
-	"description": "vite react windicss boilerplate",
+	"description": "vite react boilerplate",
 	"main": "./dist/main.tsx",
 	"author": "Refael Ben Zvi",
 	"license": "MIT",
@@ -32,8 +32,9 @@
 		"validate": "pnpm lint && pnpm test:ci && pnpm test:e2e:headless"
 	},
 	"dependencies": {
-		"@emotion/react": "^11.7.1",
-		"@emotion/styled": "^11.6.0",
+		"@emotion/react": "^11.8.1",
+		"@emotion/styled": "^11.8.1",
+		"@mui/material": "^5.8.4",
 		"@xstate/react": "^1.6.3",
 		"axios": "^0.24.0",
 		"clsx": "^1.1.1",
@@ -71,7 +72,6 @@
 		"@nabla/vite-plugin-eslint": "^1.3.5",
 		"@rollup/plugin-replace": "^3.0.1",
 		"@svgr/core": "^5.5.0",
-		"@tailwindcss/postcss7-compat": "2.1.4",
 		"@testing-library/cypress": "^8.0.2",
 		"@types/css-mediaquery": "^0.1.1",
 		"@types/jest": "^27.0.3",
@@ -85,7 +85,6 @@
 		"@typescript-eslint/eslint-plugin": "^5.8.0",
 		"@typescript-eslint/parser": "^5.8.0",
 		"@vitejs/plugin-react": "^1.1.3",
-		"@windicss/plugin-question-mark": "^0.1.1",
 		"autoprefixer": "^10.4.0",
 		"babel-plugin-transform-import-meta": "^2.1.0",
 		"babel-preset-react-app": "^10.0.1",
@@ -131,8 +130,6 @@
 		"sass": "^1.47.0",
 		"serve": "^13.0.2",
 		"start-server-and-test": "^1.14.0",
-		"tailwindcss": "npm:@tailwindcss/postcss7-compat@2.1.4",
-		"tailwindcss-flip": "^1.0.0",
 		"typescript": "^4.5.4",
 		"unplugin-auto-import": "^0.5.4",
 		"unplugin-icons": "^0.12.23",
@@ -141,9 +138,7 @@
 		"vite-plugin-pages": "^0.23.0",
 		"vite-plugin-pwa": "^0.11.12",
 		"vite-plugin-react-md": "^1.0.1",
-		"vite-plugin-windicss": "^1.6.3",
 		"vite-tsconfig-paths": "^3.3.17",
-		"windicss": "^3.4.3",
 		"workbox-core": "^6.4.2",
 		"workbox-precaching": "^6.4.2",
 		"workbox-routing": "^6.4.2",
