--- a/package.json
+++ b/package.json
@@ -1,206 +1,206 @@
 {
-  "name": "viterect",
-  "version": "1.0.0",
-  "description": "vite react tailwind boilerplate",
-  "main": "./dist/main.tsx",
-  "author": "Refael Ben Zvi",
-  "license": "MIT",
-  "scripts": {
-    "start": "pnpm run build & pnpm run serve",
-    "start:test": "pnpm run build:test & pnpm run serve:test",
-    "build": "cross-env VITE_ENV=production SOURCE_MAP=true vite build",
-    "build:test": "cross-env VITE_ENV=test SOURCE_MAP=true vite build",
-    "serve": "vite preview",
-    "clean": "rimraf dist main src/out",
-    "commit": "cz",
-    "dev": "cross-env VITE_ENV=development vite",
-    "dev:test": "cross-env VITE_ENV=test vite",
-    "extract-translations": "i18next --fail-on-warnings",
-    "prepare:husky": "husky install",
-    "lint": "pnpm lint:tsc && pnpm lint:eslint",
-    "lint:eslint": "eslint --fix --cache --ignore-path .gitignore --ext .ts,.tsx src",
-    "lint:tsc": "tsc",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:watch-all": "jest --watch-all",
-    "test:ci": "jest --ci",
-    "test:e2e": "cypress open",
-    "test:e2e:headless": "cypress run",
-    "test:e2e:ci": "cross-env VITE_ENV=test vite build && start-server-and-test serve http://localhost:4000 'cypress run --record'",
-    "coverage:jest": "start ./coverage/jest/lcov-report/index.html",
-    "coverage:cypress": "start ./coverage/cypress/lcov-report/index.html",
-    "validate": "pnpm lint && pnpm test:ci && pnpm test:e2e:headless",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
-  },
-  "dependencies": {
-    "@emotion/babel-plugin-jsx-pragmatic": "^0.1.5",
-    "@emotion/css": "^11.9.0",
-    "@emotion/react": "^11.7.1",
-    "@emotion/styled": "^11.6.0",
-    "@formkit/auto-animate": "1.0.0-beta.1",
-    "@xstate/react": "^3.0.0",
-    "axios": "^0.24.0",
-    "clsx": "^1.1.1",
-    "formik": "^2.2.9",
-    "framer-motion": "^6.5.1",
-    "i18next": "^21.6.3",
-    "i18next-browser-languagedetector": "^6.1.2",
-    "i18next-http-backend": "^1.3.1",
-    "immer": "^9.0.7",
-    "lodash": "^4.17.21",
-    "millify": "^4.0.0",
-    "moment": "^2.29.1",
-    "nprogress": "^0.2.0",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
-    "react-i18next": "^11.15.1",
-    "react-number-format": "^4.9.1",
-    "react-query": "^3.34.6",
-    "react-router": "^6.2.1",
-    "react-router-dom": "^6.2.1",
-    "react-select": "^5.4.0",
-    "react-spinners-kit": "^1.9.1",
-    "react-transition-group": "^4.4.2",
-    "react-tsparticles": "^2.1.3",
-    "recoil": "^0.5.2",
-    "tsparticles": "^2.1.3",
-    "twin.macro": "^3.0.0-rc.3",
-    "xstate": "^4.32.1"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.16.12",
-    "@babel/plugin-syntax-jsx": "^7.16.7",
-    "@babel/preset-env": "^7.16.11",
-    "@babel/preset-react": "^7.16.7",
-    "@babel/preset-typescript": "^7.16.5",
-    "@cypress/code-coverage": "^3.9.12",
-    "@iconify/json": "^1.1.447",
-    "@nabla/vite-plugin-eslint": "^1.3.5",
-    "@rollup/plugin-replace": "^3.0.1",
-    "@storybook/addon-actions": "^6.5.9",
-    "@storybook/addon-essentials": "^6.5.9",
-    "@storybook/addon-interactions": "^6.5.9",
-    "@storybook/addon-links": "^6.5.9",
-    "@storybook/addons": "^6.5.9",
-    "@storybook/builder-vite": "^0.2.0",
-    "@storybook/react": "^6.5.9",
-    "@storybook/testing-library": "^0.0.13",
-    "@storybook/theming": "^6.5.9",
-    "@svgr/core": "^5.5.0",
-    "@tailwindcss/aspect-ratio": "^0.4.0",
-    "@tailwindcss/forms": "^0.5.2",
-    "@tailwindcss/line-clamp": "^0.4.0",
-    "@tailwindcss/postcss7-compat": "2.1.4",
-    "@tailwindcss/typography": "^0.5.4",
-    "@testing-library/cypress": "^8.0.2",
-    "@types/css-mediaquery": "^0.1.1",
-    "@types/jest": "^27.0.3",
-    "@types/lodash": "^4.14.182",
-    "@types/nprogress": "^0.2.0",
-    "@types/react": "^17.0.38",
-    "@types/react-dom": "^17.0.10",
-    "@types/react-motion": "^0.0.33",
-    "@types/react-router-config": "^5.0.4",
-    "@types/react-router-dom": "^5.3.2",
-    "@types/react-transition-group": "^4.4.4",
-    "@typescript-eslint/eslint-plugin": "^5.8.0",
-    "@typescript-eslint/parser": "^5.8.0",
-    "@vitejs/plugin-react": "^1.1.3",
-    "autoprefixer": "^10.4.0",
-    "babel-loader": "^8.2.5",
-    "babel-plugin-transform-import-meta": "^2.1.0",
-    "babel-preset-react-app": "^10.0.1",
-    "babel-preset-vite": "^1.0.4",
-    "chance": "^1.1.8",
-    "commitizen": "^4.2.4",
-    "cross-env": "^7.0.3",
-    "css-mediaquery": "^0.1.2",
-    "cssnano": "^5.1.12",
-    "cypress": "^9.2.0",
-    "cypress-localstorage-commands": "^1.7.0",
-    "cz-conventional-changelog": "^3.3.0",
-    "daisyui": "^1.25.4",
-    "esbuild": "^0.14.14",
-    "eslint": "^8.5.0",
-    "eslint-config-airbnb": "^19.0.2",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-airbnb-typescript": "^16.1.0",
-    "eslint-plugin-cypress": "^2.12.1",
-    "eslint-plugin-editorconfig": "^3.2.0",
-    "eslint-plugin-import": "^2.25.3",
-    "eslint-plugin-jest": "^25.3.0",
-    "eslint-plugin-jest-dom": "^3.9.2",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-react": "^7.28.0",
-    "eslint-plugin-react-hooks": "^4.3.0",
-    "eslint-plugin-react-prefer-function-component": "^0.0.7",
-    "eslint-plugin-testing-library": "^5.0.1",
-    "eslint-plugin-unicorn": "^39.0.0",
-    "highlight.js": "^11.4.0",
-    "husky": "^7.0.4",
-    "i18next-parser": "^5.3.0",
-    "jest": "^27.4.7",
-    "jest-circus": "^27.4.6",
-    "jest-watch-typeahead": "^1.0.0",
-    "lint-staged": "^12.3.4",
-    "msw": "^0.38.1",
-    "npm-run-all": "^4.1.5",
-    "postcss": "^8.4.5",
-    "postcss-import": "^14.0.2",
-    "rimraf": "^3.0.2",
-    "rollup-plugin-istanbul": "^3.0.0",
-    "sass": "^1.47.0",
-    "serve": "^13.0.2",
-    "start-server-and-test": "^1.14.0",
-    "storybook-dark-mode": "^1.1.0",
-    "tailwindcss": "3.1.6",
-    "typescript": "^4.5.4",
-    "unplugin-auto-import": "^0.5.4",
-    "unplugin-icons": "^0.14.7",
-    "vite": "3.0.2",
-    "vite-plugin-babel-macros": "^1.0.6",
-    "vite-plugin-inspect": "^0.6.0",
-    "vite-plugin-pages": "^0.25.0",
-    "vite-plugin-pwa": "^0.12.3",
-    "vite-plugin-react-md": "^1.0.1",
-    "vite-tsconfig-paths": "^3.3.17",
-    "workbox-core": "^6.4.2",
-    "workbox-precaching": "^6.4.2",
-    "workbox-routing": "^6.4.2",
-    "workbox-window": "^6.4.2",
-    "yup": "^0.32.11"
-  },
-  "config": {
-    "commitizen": {
-      "path": "./node_modules/cz-conventional-changelog"
-    }
-  },
-  "lint-staged": {
-    "*.{ts,tsx}": [
-      "eslint --cache",
-      "jest --findRelatedTests --coverage=false"
-    ]
-  },
-  "nyc": {
-    "report-dir": "coverage/cypress",
-    "reporter": [
-      "lcov"
-    ]
-  },
-  "directories": {
-    "test": "tests"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Refaelbenzvi24/Viterect-vite-react-boilerplate.git"
-  },
-  "keywords": [],
-  "bugs": {
-    "url": "https://github.com/Refaelbenzvi24/Viterect-vite-react-boilerplate/issues"
-  },
-  "homepage": "https://github.com/Refaelbenzvi24/Viterect-vite-react-boilerplate/#readme",
-  "msw": {
-    "workerDirectory": "public"
-  }
+	"name": "viterect",
+	"version": "1.0.0",
+	"description": "vite react tailwind boilerplate",
+	"main": "./dist/main.tsx",
+	"author": "Refael Ben Zvi",
+	"license": "MIT",
+	"scripts": {
+		"start": "pnpm run build & pnpm run serve",
+		"start:test": "pnpm run build:test & pnpm run serve:test",
+		"build": "cross-env VITE_ENV=production SOURCE_MAP=true vite build",
+		"build:test": "cross-env VITE_ENV=test SOURCE_MAP=true vite build",
+		"serve": "vite preview",
+		"clean": "rimraf dist main src/out",
+		"commit": "cz",
+		"dev": "cross-env VITE_ENV=development vite",
+		"dev:test": "cross-env VITE_ENV=test vite",
+		"extract-translations": "i18next --fail-on-warnings",
+		"prepare:husky": "husky install",
+		"lint": "pnpm lint:tsc && pnpm lint:eslint",
+		"lint:eslint": "eslint --fix --cache --ignore-path .gitignore --ext .ts,.tsx src",
+		"lint:tsc": "tsc",
+		"test": "jest",
+		"test:watch": "jest --watch",
+		"test:watch-all": "jest --watch-all",
+		"test:ci": "jest --ci",
+		"test:e2e": "cypress open",
+		"test:e2e:headless": "cypress run",
+		"test:e2e:ci": "cross-env VITE_ENV=test vite build && start-server-and-test serve http://localhost:4000 'cypress run --record'",
+		"coverage:jest": "start ./coverage/jest/lcov-report/index.html",
+		"coverage:cypress": "start ./coverage/cypress/lcov-report/index.html",
+		"validate": "pnpm lint && pnpm test:ci && pnpm test:e2e:headless",
+		"storybook": "start-storybook -p 6006",
+		"build-storybook": "build-storybook"
+	},
+	"dependencies": {
+		"@emotion/babel-plugin-jsx-pragmatic": "^0.1.5",
+		"@emotion/css": "^11.9.0",
+		"@emotion/react": "^11.7.1",
+		"@emotion/styled": "^11.6.0",
+		"@formkit/auto-animate": "1.0.0-beta.1",
+		"@xstate/react": "^3.0.0",
+		"axios": "^0.24.0",
+		"clsx": "^1.1.1",
+		"formik": "^2.2.9",
+		"framer-motion": "^6.5.1",
+		"i18next": "^21.6.3",
+		"i18next-browser-languagedetector": "^6.1.2",
+		"i18next-http-backend": "^1.3.1",
+		"immer": "^9.0.7",
+		"lodash": "^4.17.21",
+		"millify": "^4.0.0",
+		"moment": "^2.29.1",
+		"nprogress": "^0.2.0",
+		"react": "^18.1.0",
+		"react-dom": "^18.1.0",
+		"react-i18next": "^11.15.1",
+		"react-number-format": "^4.9.1",
+		"react-query": "^3.34.6",
+		"react-router": "^6.2.1",
+		"react-router-dom": "^6.2.1",
+		"react-select": "^5.4.0",
+		"react-spinners-kit": "^1.9.1",
+		"react-transition-group": "^4.4.2",
+		"react-tsparticles": "^2.1.3",
+		"recoil": "^0.5.2",
+		"tsparticles": "^2.1.3",
+		"twin.macro": "^3.0.0-rc.3",
+		"xstate": "^4.32.1",
+		"yup": "^0.32.11"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.16.12",
+		"@babel/plugin-syntax-jsx": "^7.16.7",
+		"@babel/preset-env": "^7.16.11",
+		"@babel/preset-react": "^7.16.7",
+		"@babel/preset-typescript": "^7.16.5",
+		"@cypress/code-coverage": "^3.9.12",
+		"@iconify/json": "^1.1.447",
+		"@nabla/vite-plugin-eslint": "^1.3.5",
+		"@rollup/plugin-replace": "^3.0.1",
+		"@storybook/addon-actions": "^6.5.9",
+		"@storybook/addon-essentials": "^6.5.9",
+		"@storybook/addon-interactions": "^6.5.9",
+		"@storybook/addon-links": "^6.5.9",
+		"@storybook/addons": "^6.5.9",
+		"@storybook/builder-vite": "^0.2.0",
+		"@storybook/react": "^6.5.9",
+		"@storybook/testing-library": "^0.0.13",
+		"@storybook/theming": "^6.5.9",
+		"@svgr/core": "^5.5.0",
+		"@tailwindcss/aspect-ratio": "^0.4.0",
+		"@tailwindcss/forms": "^0.5.2",
+		"@tailwindcss/line-clamp": "^0.4.0",
+		"@tailwindcss/postcss7-compat": "2.1.4",
+		"@tailwindcss/typography": "^0.5.4",
+		"@testing-library/cypress": "^8.0.2",
+		"@types/css-mediaquery": "^0.1.1",
+		"@types/jest": "^27.0.3",
+		"@types/lodash": "^4.14.182",
+		"@types/nprogress": "^0.2.0",
+		"@types/react": "^17.0.38",
+		"@types/react-dom": "^17.0.10",
+		"@types/react-motion": "^0.0.33",
+		"@types/react-router-config": "^5.0.4",
+		"@types/react-router-dom": "^5.3.2",
+		"@types/react-transition-group": "^4.4.4",
+		"@typescript-eslint/eslint-plugin": "^5.8.0",
+		"@typescript-eslint/parser": "^5.8.0",
+		"@vitejs/plugin-react": "^1.1.3",
+		"autoprefixer": "^10.4.0",
+		"babel-loader": "^8.2.5",
+		"babel-plugin-transform-import-meta": "^2.1.0",
+		"babel-preset-react-app": "^10.0.1",
+		"babel-preset-vite": "^1.0.4",
+		"chance": "^1.1.8",
+		"commitizen": "^4.2.4",
+		"cross-env": "^7.0.3",
+		"css-mediaquery": "^0.1.2",
+		"cssnano": "^5.1.12",
+		"cypress": "^9.2.0",
+		"cypress-localstorage-commands": "^1.7.0",
+		"cz-conventional-changelog": "^3.3.0",
+		"daisyui": "^1.25.4",
+		"esbuild": "^0.14.14",
+		"eslint": "^8.5.0",
+		"eslint-config-airbnb": "^19.0.2",
+		"eslint-config-airbnb-base": "^15.0.0",
+		"eslint-config-airbnb-typescript": "^16.1.0",
+		"eslint-plugin-cypress": "^2.12.1",
+		"eslint-plugin-editorconfig": "^3.2.0",
+		"eslint-plugin-import": "^2.25.3",
+		"eslint-plugin-jest": "^25.3.0",
+		"eslint-plugin-jest-dom": "^3.9.2",
+		"eslint-plugin-jsx-a11y": "^6.5.1",
+		"eslint-plugin-react": "^7.28.0",
+		"eslint-plugin-react-hooks": "^4.3.0",
+		"eslint-plugin-react-prefer-function-component": "^0.0.7",
+		"eslint-plugin-testing-library": "^5.0.1",
+		"eslint-plugin-unicorn": "^39.0.0",
+		"highlight.js": "^11.4.0",
+		"husky": "^7.0.4",
+		"i18next-parser": "^5.3.0",
+		"jest": "^27.4.7",
+		"jest-circus": "^27.4.6",
+		"jest-watch-typeahead": "^1.0.0",
+		"lint-staged": "^12.3.4",
+		"msw": "^0.38.1",
+		"npm-run-all": "^4.1.5",
+		"postcss": "^8.4.5",
+		"postcss-import": "^14.0.2",
+		"rimraf": "^3.0.2",
+		"rollup-plugin-istanbul": "^3.0.0",
+		"sass": "^1.47.0",
+		"serve": "^13.0.2",
+		"start-server-and-test": "^1.14.0",
+		"storybook-dark-mode": "^1.1.0",
+		"tailwindcss": "3.1.6",
+		"typescript": "^4.5.4",
+		"unplugin-auto-import": "^0.5.4",
+		"unplugin-icons": "^0.14.7",
+		"vite": "3.0.2",
+		"vite-plugin-babel-macros": "^1.0.6",
+		"vite-plugin-inspect": "^0.6.0",
+		"vite-plugin-pages": "^0.25.0",
+		"vite-plugin-pwa": "^0.12.3",
+		"vite-plugin-react-md": "^1.0.1",
+		"vite-tsconfig-paths": "^3.3.17",
+		"workbox-core": "^6.4.2",
+		"workbox-precaching": "^6.4.2",
+		"workbox-routing": "^6.4.2",
+		"workbox-window": "^6.4.2"
+	},
+	"config": {
+		"commitizen": {
+			"path": "./node_modules/cz-conventional-changelog"
+		}
+	},
+	"lint-staged": {
+		"*.{ts,tsx}": [
+			"eslint --cache",
+			"jest --findRelatedTests --coverage=false"
+		]
+	},
+	"nyc": {
+		"report-dir": "coverage/cypress",
+		"reporter": [
+			"lcov"
+		]
+	},
+	"directories": {
+		"test": "tests"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/Refaelbenzvi24/Viterect-vite-react-boilerplate.git"
+	},
+	"keywords": [],
+	"bugs": {
+		"url": "https://github.com/Refaelbenzvi24/Viterect-vite-react-boilerplate/issues"
+	},
+	"homepage": "https://github.com/Refaelbenzvi24/Viterect-vite-react-boilerplate/#readme",
+	"msw": {
+		"workerDirectory": "public"
+	}
 }
